# retrieve-spotlight

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conf_file.hpp  fetch.bat  main.cpp  retrieve_spotlight_config.txt
